--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <h2 class="header center orange-text">Giuliano Dore</h2>
             
             <div class="row center">
-                <h5 class="header col s12 light">Freelance .NET / Web developer</h5>
+                <h5 class="header col s12 light">Freelance .NET / Web / front-end developer</h5>
             </div>
             
-            <div class="row center">
+            <div class="row">
                 <div class="col s3 m3">
                     <div class="card">
                         <div class="card-image">
@@ -55,29 +55,35 @@
                     <div>
                         <ul class="collection with-header">
                             <li class="collection-header"><h5>My experiences</h5></li>
+                             <li class="collection-item avatar">
+                                <img src="https://avatars.githubusercontent.com/u/16306379" alt="Freelance" class="circle"/>
+                                <span class="title">Dore Giuliano Company</span>
+                                <p>.NET / Web developer <br> Nov 2015 to present</p>
+                                <span class="secondary-content">London</span>
+                            </li>
                             <li class="collection-item avatar">
                                 <img src="assets/images/logo-mdbriefcase.jpg" alt="mdbriefcase" class="circle"/>
                                 <span class="title">mdBriefcase</span>
-                                <p>.NET / Web developer</p>
-                                <span>Toronto, Canada</span>
+                                <p>.NET / Web developer <br> Dec 2014 to Jan 2016</p>
+                                <span class="secondary-content">Toronto</span>
                             </li>
                             <li class="collection-item avatar">
                                 <img src="assets/images/logo-emakina.png" alt="Emakina" class="circle"/>
                                 <span class="title">Emakina</span>
-                                <p>.NET / Web developer</p>
-                                <span>Brussels, Belgium</span>
+                                <p>.NET / Web developer <br> Apr 2013 to Nov 2014</p>
+                                <span class="secondary-content">Brussels</span>
                             </li>
                             <li class="collection-item avatar">
                                 <img src="assets/images/logo-adneom.jpg" alt="Adneom" class="circle"/>
                                 <span class="title">Adneom</span>
-                                <p>.NET / Web consultatn</p>
-                                <span>Brussels, Belgium</span>
+                                <p>.NET / Web consultant <br> Jul 2012 to Mar 2013</p>
+                                <span class="secondary-content">Brussels</span>
                             </li>
                             <li class="collection-item avatar">
                                 <img src="assets/images/logo-microsoft.jpg" alt="Microsoft" class="circle"/>
                                 <span class="title">Microsoft Innovation Center</span>
-                                <p>.NET / Web intern</p>
-                                <span>Mons, Belgium</span>
+                                <p>.NET / Web intern <br> Feb 2012 to May 2012</p>
+                                <span class="secondary-content">Mons</span>
                             </li>
                         </ul> 
                     </div>
