first clean version

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
   </head>
   <body class="grey lighten-5">
 
+    <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Giuliano Dore</a>
+        </div>
+    </nav>
+
     <div class="section no-pad-bot">
         <div class="container">
             <h2 class="header center orange-text">Giuliano Dore</h2>
@@ -91,5 +96,32 @@
             </div>
         </div>
     </div>
+    
+    <footer class="page-footer orange">
+    <div class="container">
+      <div class="row">
+        <div class="col l9 s12">
+          <h5 class="white-text">A little bit about me</h5>
+          <p class="grey-text text-lighten-4">Rigorous and motivated, I am always looking for improvement and challenges. Currently in London, UK.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" target="_blank" href="https://www.linkedin.com/in/giulianodore">LinkedIn</a></li>
+            <li><a class="white-text" target="_blank" href="https://github.com/giuunit">Github</a></li>
+            <li><a class="white-text" target="_blank" href="https://onedrive.live.com/redir?resid=55FB04C24525115C!28924&authkey=!ABasyJ7ROdsxe2o&ithint=file%2cpdf">My resume</a></li>
+            <li><a class="white-text" target="_blank" href="mailto:giuliano.dore@gmail.com">Email</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
   </body>
 </html>
