--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body class="grey lighten-5">
 
     <nav class="light-blue lighten-1" role="navigation">
-        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Giuliano Dore</a>
+        <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo"></a>
         </div>
     </nav>
 
@@ -29,7 +29,7 @@
             </div>
             
             <div class="row">
-                <div class="col s3 m3">
+                <div class="col s12 m4">
                     <div class="card">
                         <div class="card-image">
                             <img class="responsive-img" src="https://avatars.githubusercontent.com/u/16306379" />
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 
-                <div class="col s8 m8">
+                <div class="col s12 m8">
                     <div>
                         <ul class="collection with-header">
                             <li class="collection-header"><h5>My experiences</h5></li>
